<resources>

    <string name="app_name">GreenGo MAD Project</string>

    <string name="pay_btn">Click To Pay</string>
    <string name="phone">Your Contact Number</string>
    <string name="enter_details">Enter Your Delivery Details</string>
    <string name="enter_address">Your Address</string>
    <string name="checkout_header">Checkout</string>
    <string name="select_payment">Choose Your Payment Method</string>
    <string name="card_btn">One Time Payment</string>
    <string name="cod_btn">Cash On Delivery</string>
    <string name="tip_1">Only You Have To Make Payment To Our Delivery Agent.</string>
    <string name="tip_2">Due to the Prevailing Situation Of the Country, Deliveries Might Get Delayed Than Usual.</string>


    <string name="favourite">FAVOURITES</string>
    <string name="favouritsbar">FAVOURITS</string>
    <string name="appletext">Apple</string>
    <string name="pick1">Pickup from organic farms</string>
    <string name="fav">FAVOURITES</string>
    <string name="appletext1">Apple</string>
    <string name="pick01">Pick up from organic farms</string>
    <string name="p01">160Per/kg</string>
    <string name="btn1">ADD</string>
    <string name="apprtext1">Appricot</string>
    <string name="pick2">Pickup from organic farms</string>
    <string name="add2">ADD</string>
    <string name="p02">200Per/kg</string>
    <string name="oniontext1">Onion</string>
    <string name="pick3">Pick up from organic farms</string>
    <string name="add3">ADD</string>



    <string name="app_name">Green Go</string>


    <string name="headingOneHome">GreenGo</string>
    <string name="homeHeading">GreenGo</string>
    <string name="homeaHeading2">Enjoy Eating</string>
    <string name="homePara">All the fresh food on your phone</string>
    <string name="homeButtonText">Get Started</string>
    <string name="signUpName">Enter Your Name</string>
    <string name="signUpMobile">Enter Your Mobile Number</string>
    <string name="registerBtn">Register</string>
    <string name="loginBtn">Login</string>
    <string name="registerbtn">Register</string>

    <string name="card_details">Enter Your Credit/Debit Card Details</string>
    <string name="amont_text">Amount :</string>
    <string name="lkr">LKR</string>
    <string name="total">00000.00</string>
    <string name="save_card">Save yor card for future transactions.</string>
    <string name="card_number">Card Nummber</string>
    <string name="expiry_date">Expiry MM  / YY</string>
    <string name="cvv">CVV</string>
    <string name="pay_now_btn">PAY NOW</string>
    <string name="done">Your Order Is Conformed !</string>
    <string name="thank_you">Thank You For Shopping WIth Us</string>
    <string name="saved_cards">Saved Card</string>
    <string name="review">Rate Us</string>
    <string name="card_number1">Card Number</string>
    <string name="view_card">View</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="your_card">Your Card</string>


    <string name="p03">120Per/kg</string>
    <string name="feedback">FEEDBACK</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="feedbacktext">Feedback</string>
    <string name="btnview">View</string>
    <string name="txt_name">Text</string>
    <string name="txt_email">Text</string>
    <string name="txt_feedback">Text</string>

    <string name="textview">TextView</string>


    <string name="edit_name">Enter your name</string>
    <string name="edit_email">Enter your email address</string>
    <string name="edit_feedback">Enter your feedback</string>
    <string name="text_name">Text</string>
    <string name="text_email">Text</string>
    <string name="text_feedback">Text</string>
    <string name="feedbackr">FEEDBACK VIEW</string>
    <string name="name1">Monadi</string>
    <string name="email1">Monadi@gmail.com</string>
    <string name="fee1">Good</string>


    <string name="alreadyHaveAccount">Already a User? Login Here</string>
    <string name="newUserLink">New User? Register Here</string>
    <string name="loginForgotPassword">Forgot Password</string>
    <string name="welcomeTxt">Welcome</string>
    <string name="emailDisplayTxt">Your Email Address</string>
    <string name="nameDisplayTxt">Your Name</string>
    <string name="passwordDisplayTxt">Your Password</string>
    <string name="logoutBtn">Logout</string>
    <string name="forgotPasswordHeading">Forgot Password</string>
    <string name="resetBtn">Reset Password</string>
    <string name="updateBtn">Update</string>


</resources>