<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#401AB15B"
    tools:context=".favourits1">

    <TextView
        android:id="@+id/fav"
        android:layout_width="364dp"
        android:layout_height="49dp"

        android:text="@string/fav"
        android:textColor="#311B92"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="400dp"
        android:layout_height="168dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="171dp"
            android:layout_height="159dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/apple" />

        <TextView
            android:id="@+id/appletext1"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="116dp"
            android:layout_marginRight="116dp"
            android:text="@string/appletext1"
            android:textColor="#1C7A45"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pick1"
            android:layout_width="186dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/pick01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appletext1" />

        <TextView
            android:id="@+id/p01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/p01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintStart_toEndOf="@+id/appletext1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn1"
            app:backgroundTint="#25B564"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="403dp"
        android:layout_height="167dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.045">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="175dp"
            android:layout_height="149dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529"
            app:srcCompat="@drawable/appricot" />

        <TextView
            android:id="@+id/apprtext1"
            android:layout_width="83dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:textColor="#1C7A45"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/apprtext1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pick2"
            android:layout_width="177dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:text="@string/pick2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/apprtext1" />

        <Button
            android:id="@+id/add2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/add2"
            app:backgroundTint="#25B564"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.865" />

        <TextView
            android:id="@+id/p02"
            android:layout_width="69dp"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:text="@string/p02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.709"
            app:layout_constraintStart_toEndOf="@+id/apprtext1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="403dp"
        android:layout_height="169dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="191dp"
            android:layout_height="144dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/onion" />

        <TextView
            android:id="@+id/oniontext1"
            android:layout_width="72dp"
            android:layout_height="23dp"
            android:layout_marginTop="16dp"
            android:textColor="#1C7A45"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/oniontext1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pick3"
            android:layout_width="181dp"
            android:layout_height="23dp"
            android:layout_marginTop="12dp"
            android:text="@string/pick3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/oniontext1" />

        <Button
            android:id="@+id/add3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add3"
            app:backgroundTint="#25B564"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.863"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/pick3"
            app:layout_constraintVertical_bias="0.407" />

        <TextView
            android:id="@+id/p03"
            android:layout_width="81dp"
            android:layout_height="21dp"
            android:text="@string/p03"
            app:layout_constraintBottom_toTopOf="@+id/pick3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/oniontext1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="69dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>