<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#421AB15B"
    tools:context=".completed">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="392dp"
        android:layout_height="477dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        app:srcCompat="@drawable/rectangle3" />

    <TextView
        android:id="@+id/done"
        android:layout_width="247dp"
        android:layout_height="102dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="#1C7A45"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/thank_you"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginTop="376dp"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textColor="#1C7A45"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="182dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.219"
        app:srcCompat="@drawable/completed" />

    <Button
        android:id="@+id/review"
        android:layout_width="175dp"
        android:layout_height="67dp"
        android:layout_marginTop="76dp"
        android:drawableLeft="@drawable/ic_review"
        android:foregroundGravity="center"
        android:text="@string/review"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thank_you" />

    <Button
        android:id="@+id/saved_cards"
        android:layout_width="175dp"
        android:layout_height="67dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_credit_card"
        android:foregroundGravity="center"
        android:text="@string/saved_cards"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

</androidx.constraintlayout.widget.ConstraintLayout>