<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#421AB15B"
    tools:context=".payment_type">

    <TextView
        android:id="@+id/tip_2"
        android:layout_width="354dp"
        android:layout_height="70dp"
        android:drawableLeft="@drawable/ic_tip"
        android:drawablePadding="15dp"
        android:gravity="left"
        android:text="@string/tip_2"
        android:textColor="#1C7A45"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_1"
        app:layout_constraintVertical_bias="0.195" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="495dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle_two" />

    <Button
        android:id="@+id/cod_btn"
        android:layout_width="120dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:gravity="center"
        android:text="@string/cod_btn"
        app:backgroundTint="#25B564"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/select_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/select_payment"
        android:textColor="#1C7A45"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="495dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_payment"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/rectangle_two" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="333dp"
        android:layout_height="140dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/card" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="197dp"
        android:layout_height="148dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/cash_on_delivery" />

    <Button
        android:id="@+id/card_btn"
        android:layout_width="124dp"
        android:layout_height="95dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:text="@string/card_btn"
        app:backgroundTint="#25B564"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/tip_1"
        android:layout_width="351dp"
        android:layout_height="53dp"
        android:drawableLeft="@drawable/ic_tip"
        android:drawablePadding="15dp"
        android:gravity="left"
        android:text="@string/tip_1"
        android:textColor="#1C7A45"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.153" />

</androidx.constraintlayout.widget.ConstraintLayout>