<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#421AB15B"
    tools:context=".checkout">


    <TextView
        android:id="@+id/checkout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_header"
        android:textColor="#1C7A45"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="579dp"
        android:layout_height="447dp"
        android:layout_marginTop="376dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle3" />

    <EditText
        android:id="@+id/enter_address"
        android:layout_width="342dp"
        android:layout_height="111dp"
        android:drawableLeft="@drawable/ic_address"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Your Address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/pay_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.901" />

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_pay"
        android:padding="10dp"
        android:text="@string/pay_btn"
        android:textSize="16sp"
        android:textStyle="normal"
        app:backgroundTint="#25B564"
        app:iconSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.944" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="366dp"
        android:layout_height="322dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delivery_man" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Your Contact Number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/pay_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/enter_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textColor="#1C7A45"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />
</androidx.constraintlayout.widget.ConstraintLayout>